fix team pages links and align text main page left

--- a/css/index_styles.css
+++ b/css/index_styles.css
@@ -63,10 +63,11 @@ nav ul li.padded {
 .hero p {
     font-size: 1.2em;
     margin-bottom: 20px;
+    text-align: left;
 }
 
 .hero ol {
-    display: inline-block;
+    /*display: inline-block;*/
     text-align:left;
 }
 
